@@ -1,3 +1,8 @@
+2008-08-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-itmedia.el (shimbun-clear-contents): Divide too complicated regexp
+	into pieces.  Reported by NOMIYA Masaru <nomiya@galaxy.dti.ne.jp>.
+
 2008-07-23  David Hansen  <david.hansen@gmx.net>
 
 	* sb-heise.el (shimbun-heise-get-newsticker-headers): Follow new page
